# NSH

./: .dockerignore  .gitignore  Dockerfile  README.md  USER_MANUAL.md  docker-compose.prod.yml  forensic_report_24h.md  math_audit_30day.json  mission_report_1week.md  mission_report_30day.md  project_contents.md  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test_api.py
.github/workflows/: ci-cd.yml
NSH/: physics.py  requirements.txt  state.py
acm_engine/: physics_rk4.cpp
cpp_engine/: physics_rk4.cpp
data/: ground_stations.csv
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: telemetryClient.ts
frontend/src/components/: BullseyeRadar.tsx  DashboardLayout.tsx  DeckGLMap.tsx  Header.tsx  ManeuverGantt.tsx  ResourceMetrics.tsx
routers/: telemetry.py
satellite_api/: collision.py  coordinates.py  db.py  gravity.py  ground_stations.py  logging_config.py  main.py  models.py  physics.py  state.py  state_redis.py  test_api.py
satellite_api/acm/: brain.py  plugins.py
satellite_api/middleware/: auth.py
satellite_api/routers/: export.py  maneuver.py  maneuver_history.py  maneuvers.py  simulation.py  telemetry.py  visualization.py
tests/: conftest.py
tests/benchmark/: test_snapshot_performance.py
tests/integration/: test_maneuvers.py  test_simulation.py  test_telemetry.py  test_visualization.py
tests/regression/: test_conjunction_scenario.py
tests/unit/: test_cooldown.py  test_fuel.py  test_los.py  test_propagation.py
(+4 files in other folders)
